<resources>
    <string name="app_name">EncryptedMessenger</string>
    <string name="error_key_derivation">[!] Key derivation failed: %1$s</string>
    <string name="hint_username">Username</string>
    <string name="hint_room">Room</string>
    <string name="hint_password">Password</string>
    <string name="connect_button">Connect</string>
    <string name="hint_send_message">Type a message</string>
    <string name="send_button">Send</string>
    <string name="exit_chat">Exit Chat</string>
    <string name="connected_status">(connected)</string>
    <string name="disconnected_status">(disconnected)</string>
    <string name="reconnecting_status">(reconnecting)</string>
    <string name="room_name_placeholder">Room Name</string>
    <string name="connection_status_placeholder">(disconnected)</string>
    <string name="error_all_fields_required">All fields are required</string>
    <string name="error_invalid_username">Invalid username (only letters/numbers, max 20 chars)</string>
    <string name="error_invalid_room">Invalid room (only letters/numbers, max 20 chars)</string>
    <string name="error_invalid_password">Invalid password (only letters/numbers, max 20 chars)</string>
    <string name="toast_press_back_again">Press back again to exit</string>
    <string name="save_details">Save Details</string>
    <string name="saved_details">Saved Rooms</string>
</resources>
